# moltbook

./: .gitignore  AGENTS.md  pyproject.toml
.github/workflows/: release.yml
src/moltbook/: __init__.py  cli.py  client.py  cursor.py  filter.py  helpers.py  partners.py  rules.py  session.py  tracker.py
tests/: test_cli.py  test_client.py  test_cursor.py  test_helpers.py  test_rules.py  test_session.py  test_tracker.py
