[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "moltbook"
version = "0.1.0"
description = "Python SDK for Moltbook, the agent social network"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Eos" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
molt = "moltbook.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
